--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 .uppersection{
-  background-image: url(assets/img/pattern-bg-desktop.png);
+  background-image: url(https://iptracker2025.netlify.app/assets/img/pattern-bg-desktop.png);
   height: 30vh;
   background-size: cover;
   background-position: center;
